# HealthManagement

./: Readme.md
healthadmin/: .env  App.spec.tsx  README.md  index.html  package-lock.json  package.json
healthbackend/: README.md  SQLiteSpy.db3  db-cn.sqlite3  db.sqlite3  generatetestdata.py  manage.py  modeltofrontendlist.py  pyproject.toml  requirements.txt  resetdb.bat  testdata-en.py  testdata.py
healthbackend/adminlteui/locale/zh/LC_MESSAGES/: django.po
healthbackend/adminlteui/locale/zh_Hans/LC_MESSAGES/: django.po
healthbackend/adminlteui/templates/admin/: base_site.html
healthbackend/adminlteui/templatetags/: adminlte_list.py  adminlte_menu.py
healthbackend/api/: permissions.py  serializers.py  urls.py  views.py
healthbackend/healthbackend/: asgi.py  settings.py  urls.py  wsgi.py
healthbackend/healthmanage/: admin.py  adminlte_config.py  apps.py  forms.py  models.py  risks.py  urls.py  views.py
healthbackend/healthmanage/migrations/: 0001_initial.py  0002_alter_agescale_options_alter_bcholesterin_options_and_more.py
healthbackend/healthmanage/templates/: adminltui修改.txt  base.html  index.html  pagination.html
healthbackend/healthmanage/templates/healthmanage/: analye.html  bcholesterinassess.html  bloodpressureassess.html  dashboard.html  diabetesanalye.html  drinkanalye.html  fatanalye.html  habitassess.html  hyperlipemanalye.html  hypertensionanalye.html  icvdrisk.html  index.html  info.html  login.html  register.html  smokeanalye.html  weightassess.html
healthbackend/locale/zh_Hans/LC_MESSAGES/: django.mo  django.po
(+60 files in other folders)
